# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-runtime-tokio — sce_link_runtime_tokio (Rust + tokio + mio epoll
# baseline) per docs/runtime-crate-tokio.md.
#
# Phase Z entry (R51). Initial surface: `LinkDriver` trait + tokio
# TCP impl + 2-task `tests/echo_demo.rs` proving wire interop end-
# to-end. This is the FIRST round in the project where two
# concurrent processes (here: tokio tasks on a single process via
# loopback) exchange real wire bytes encoded by wz-codecs and decoded
# back on the other side.
#
# Scope reduction vs the full docs/runtime-crate-tokio.md spec:
#   - 1 process, 2 tasks (publisher + subscriber on loopback TCP)
#   - LinkDriver trait shape matches §2.1 but only the 4 core methods;
#     trust-class gating (§2.4) + io_uring opt-in (§4.1) + pool-slot
#     Rx borrows (§2.3) all deferred to later rounds.
#   - Codec wiring is fixed to msg_put for the demo; full SCXML-driven
#     binding lands when session_fsm wiring closes (R54+).
#
# The R52 echo demo is the OBSERVABLE COMMUNICATION MILESTONE the
# project has been working toward since R28 ("when will we see
# communication?"). It does not yet exercise session FSM handshake
# or framing; the publisher sends a raw msg_put body, the subscriber
# decodes the raw msg_put body. This is the smallest end-to-end
# proof that wz-codecs Layer 3-validated bytes survive a real
# network round-trip.

[package]
name = "wz-runtime-tokio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Tokio + mio epoll runtime for watching-zenoh AP linux target (Phase D.1)."

[lib]
name = "wz_runtime_tokio"
path = "src/lib.rs"

# R302b — first source-level Cargo features. `default = [...]` keeps
# existing in-workspace consumers (wz-ap-demo, integration tests,
# session_fsm tests) building unchanged; opt-out via
# `cargo check --no-default-features` exercises the feature-off path.
# Downstream of the `wz` facade these features are forwarded via
# `wz-runtime-tokio?/liveliness-token` etc. so a wz consumer enabling
# `preset-mcu-minimal` (no liveliness) gets the slim build.
#
# R307 — query domain joins the source-gated set (6 new entries).
# `query-get` gates `Session::get` / `Session::get_aliased`;
# `query-queryable` gates `Session::declare_queryable` /
# `declare_queryable_aliased` + the entire `crate::query` module;
# `query-reply` gates the entire `crate::reply` module (the get-side
# ReplyRegistry). Per-option setters on `QueryOptions` gate behind
# `query-target` / `query-timeout` / `query-consolidation` — each
# implies `query-get` since they only refine the get call path.
# `query-get` implies `query-reply` because `Session::get` registers a
# pending entry against `crate::reply::ReplyRegistry`. The defaults
# below mirror R302b: every existing in-workspace consumer compiles
# unchanged because the default features turn every R307 gate ON.
#
# R309 — declare domain joins the source-gated set (7 new entries).
# Each `send_declare_*` / `send_undeclare_*` / `send_interest_*` method
# in `session_glue.rs` carries the matching gate; the
# Application-layer `Session::declare_*` call sites remain on their
# existing semantic gate (`liveliness-token`, `query-queryable`,
# etc.) and pull the wire-emit transitively via the implication chain
# below. `liveliness-token` now implies `declare-token` +
# `declare-undeclare` so the existing R277 `LivelinessToken::Drop`
# emit continues to compile; `liveliness-subscriber` implies
# `declare-interest` + `declare-final` (R280 send_interest_*).
[features]
# R311a1 — codec-init-body / codec-open-body forwards to the matching
# wz-codecs feature. Forward-only (no force-ON): the wz-codecs dep
# below switches to `default-features = false` so the codec emit/
# include is governed purely by these forwards, which makes a future
# facade-level `--no-default-features` (R311a4) actually able to elide
# the init_body / open_body codec pair. R311a2 cfg-gates the
# `use wz_codecs::init_body::InitBody` import sites in session_glue.rs;
# R311a3 cfg-gates the `InboundFrame::Init { body, .. }` enum variant
# and parse/match arms. Until R311a3 lands, `--no-default-features` at
# wz-runtime-tokio level breaks compile (intended cascade chain).
default = [
    "liveliness-token",
    "liveliness-subscriber",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "declare-final",
    "declare-interest",
    "declare-keyexpr",
    "declare-queryable",
    "declare-subscriber",
    "declare-token",
    "declare-undeclare",
    "codec-init-body",
    "codec-open-body",
    "codec-keep-alive",
    "codec-close",
]
liveliness-token = ["declare-token", "declare-undeclare"]
liveliness-subscriber = ["declare-interest", "declare-final"]
declare-final = []
declare-interest = []
declare-keyexpr = []
declare-queryable = []
declare-subscriber = []
declare-token = []
declare-undeclare = []
# `query-get` implies BOTH `query-reply` (the get-side ReplyRegistry
# tracks pending entries) AND `query-queryable` (the loopback path
# inside `Session::query` fans into the in-process QueryableRegistry
# and converts emitted `QueryReply` to `InboundReply` via the
# `From` adapter that lives in `reply.rs`). A pure wire-only get
# without the loopback path is a future-round refinement; the R307
# baseline keeps the loopback path universally available so the AP
# MVP integration tests + ap-demo continue to exercise both branches.
query-get = ["query-reply", "query-queryable"]
query-queryable = []
query-reply = []
query-target = ["query-get"]
query-timeout = ["query-get"]
query-consolidation = ["query-get"]
codec-init-body = ["wz-codecs/codec-init-body"]
codec-open-body = ["wz-codecs/codec-open-body"]
# R311b — codec-keep-alive forwards the wz-codecs gate. Session lease
# refresh path (last_inbound_keepalive_at stamp inside handle_inbound)
# is gated together with the wire-level KeepAlive parse/handle/FSM
# arms in session_glue.rs. Feature-off means a long-lived session
# eventually trips the lease.expired path because no peer KeepAlive
# can be decoded into a stamp update; the existing established_at
# baseline remains so short sessions still complete normally.
codec-keep-alive = ["wz-codecs/codec-keep-alive"]
# R311c — codec-close forwards wz-codecs. Wire encode (encode_close +
# send_close_with_reason + bind_unit "send_close_frame_with_reason")
# + decode (parse_inbound T_MID_CLOSE) elide together; FSM-level
# CloseReason enum + set_close_reason_* bindings stay unconditional.
codec-close = ["wz-codecs/codec-close"]

[build-dependencies]
sce-build = { path = "../../vendor/sce/sce-build" }

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
# R311a1 — `default-features = false` + explicit `alloc` so the codec
# emit/include of `init_body` / `open_body` is governed strictly by the
# `codec-init-body` / `codec-open-body` forwards above. Without
# disabling defaults the codec features would always activate via
# wz-codecs's own default list, making the forwards a no-op and
# preventing facade-level `--no-default-features` from elide-ing the
# pair.
wz-codecs = { path = "../wz-codecs", default-features = false, features = ["alloc"] }
# R252 — Runtime / TimeSource / Allocator trait surface. The AP profile
# (this crate) bridges tokio + std into the trait contract authored in
# R251; the MCU profile (future wz-runtime-lwip) will provide the same
# trait implementations against lwIP + an embedded async executor. The
# `alloc` feature is on because tokio + this crate are AP-only by design
# and need the R266 `RuntimeError::JoinFailed { payload: Box<...> }`
# panic-capture variant; the trait crate itself stays unconditionally
# no_std (std is available at the binary linker level for AP).
wz-runtime-core = { path = "../wz-runtime-core", features = ["alloc"] }
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust" }
sce-rust-runtime = { path = "../../vendor/sce/sce-rust-runtime" }
sce-rust-lua = { path = "../../vendor/sce/sce-rust-lua" }
log = "0.4"
# Cookie generation per RFC §5.M (Accepting-side anti-amplification
# cookie). HMAC-SHA256 is the wire-spec-mandated MAC; the RustCrypto
# `hmac` + `sha2` pair is the standard Rust ecosystem choice. The
# MCU sibling (wz-runtime-lwip + Phase W) will swap this for
# sce_intrinsics_runtime::hmac_sha256 once that intrinsic lands per
# the §5.I architectural-tier registry (OQ-W15 (a) closure).
hmac = "0.12"
sha2 = "0.10"
# Zeroize cookie signing keys on drop. RustCrypto ecosystem standard;
# the `Zeroizing<Vec<u8>>` wrapper clears the heap allocation when
# the SigningKey owning it is dropped, preventing cryptographic
# secret residue in core dumps / heap leaks / panic backtraces
# (3rd review #4 from R63's strict audit retrospect).
zeroize = { version = "1", features = ["zeroize_derive"] }
# R69 — AP-side entropy source for SigningKey::new_random. RustCrypto
# ecosystem chooses `getrandom` for OS-syscall-backed (Linux: getrandom(2)
# fallback to /dev/urandom; macOS: getentropy) cryptographic random bytes.
# MCU sibling (wz-runtime-lwip Phase W) does NOT pull this dep — it
# routes through `sce_intrinsics_runtime::rng` per §5.I architectural-
# tier registry (intrinsics §2.5). Keeping the dep AP-only preserves
# the no_std contract on the MCU build.
getrandom = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# R71 — test fixtures + rebind shims moved to a separate sibling crate
# so the production compile units of this crate carry zero test-only
# code paths. Previously these helpers lived behind a `_test_support`
# Cargo feature; the sibling-crate model is a stronger encapsulation
# contract because a downstream consumer cannot enable the feature
# transitively to import the fixtures.
wz-runtime-tokio-test-support = { path = "../wz-runtime-tokio-test-support" }

[lints]
workspace = true
